<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#E6E7E8"
    android:fillViewport="true" >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#E6E7E8"
    android:orientation="vertical">
   
  <ImageButton
      	android:id="@+id/btnSobre"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:background="#E6E7E8"
        android:contentDescription="@drawable/logo_login_png"
        android:scaleType="fitCenter"
        
        android:src="@drawable/logo_login_png" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digUsu"
        android:maxLines="1" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digSenha"
        android:inputType="textPassword"
        android:maxLines="1" />

    <CheckBox
        android:id="@+id/cbManterConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantCont" />
	
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/entrar" />
        
    </RelativeLayout>
  
     	<TextView
          android:layout_width="fill_parent"
          android:layout_height="2dp"
          android:gravity="top"
          android:background="#666666"
          android:textStyle="bold" />
     

     <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <Button
            android:id="@+id/btnCriarConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/criarConta" />        
        
    </RelativeLayout>
</LinearLayout>
</ScrollView>